--- a/index.html
+++ b/index.html
@@ -201,28 +201,28 @@
 
       <!-- Duplicate logos for seamless loop -->
       <div class="flex items-center gap-16">
-        <img src="/assets/clients/client1.svg" alt="Client 1"
+        <img src="assets/clients/client1.svg" alt="Client 1"
           class="h-14 w-auto object-contain transition-transform duration-300 hover:scale-110" />
-        <img src="/assets/clients/client5.svg" alt="Client 2"
+        <img src="assets/clients/client5.svg" alt="Client 2"
           class="h-14 w-auto object-contain transition-transform duration-300 hover:scale-110" />
-        <img src="/assets/clients/client2.svg" alt="Client 3"
+        <img src="assets/clients/client2.svg" alt="Client 3"
           class="h-14 w-auto object-contain transition-transform duration-300 hover:scale-110" />
-        <img src="/assets/clients/client3.svg" alt="Client 4"
+        <img src="assets/clients/client3.svg" alt="Client 4"
           class="h-14 w-auto object-contain transition-transform duration-300 hover:scale-110" />
-        <img src="/assets/clients/client4.svg" alt="Client 5"
+        <img src="assets/clients/client4.svg" alt="Client 5"
           class="h-14 w-auto object-contain transition-transform duration-300 hover:scale-110" />
       </div>
 
-      <div class="flex items-center gap-16">
-        <img src="/assets/clients/INFINITY HYDRAULICS (Horizontal M.).pptx (1).svg" alt="Client 1"
+       <div class="flex items-center gap-16">
+        <img src="assets/clients/client1.svg" alt="Client 1"
           class="h-14 w-auto object-contain transition-transform duration-300 hover:scale-110" />
-        <img src="/assets/clients/INFINITY HYDRAULICS (Horizontal M.).pptx (2).svg" alt="Client 2"
+        <img src="assets/clients/client5.svg" alt="Client 2"
           class="h-14 w-auto object-contain transition-transform duration-300 hover:scale-110" />
-        <img src="/assets/clients/INFINITY HYDRAULICS (Horizontal M.).pptx (3).svg" alt="Client 3"
+        <img src="assets/clients/client2.svg" alt="Client 3"
           class="h-14 w-auto object-contain transition-transform duration-300 hover:scale-110" />
-        <img src="/assets/clients/INFINITY HYDRAULICS (Horizontal M.).pptx (4).svg" alt="Client 4"
+        <img src="assets/clients/client3.svg" alt="Client 4"
           class="h-14 w-auto object-contain transition-transform duration-300 hover:scale-110" />
-        <img src="/assets/clients/INFINITY HYDRAULICS (Horizontal M.).pptx.svg" alt="Client 5"
+        <img src="assets/clients/client4.svg" alt="Client 5"
           class="h-14 w-auto object-contain transition-transform duration-300 hover:scale-110" />
       </div>
     </div>
@@ -254,7 +254,7 @@
 
       <!-- Left Image -->
       <div class="flex justify-center" data-aos="fade-right" data-aos-duration="1000">
-        <img src="/assets/Hero/about.svg" alt="Main Image"
+        <img src="assets/Hero/about.svg" alt="Main Image"
           class="rounded-xl shadow-lg w-full max-w-md md:max-w-lg object-cover" />
       </div>
 
