routing issue solved

--- a/about.html
+++ b/about.html
@@ -48,9 +48,9 @@
 
         <!-- Desktop Nav -->
         <div class="hidden md:flex items-center space-x-8">
-          <a href="/index.html" class="text-gray-700 hover:text-blue-600 font-medium">Home</a>
-          <a href="/products.html" class="text-gray-700 hover:text-blue-600 font-medium">Products</a>
-          <a href="/about.html" class="text-gray-700 hover:text-blue-600 font-medium">About Us</a>
+          <a href="index.html" class="text-gray-700 hover:text-blue-600 font-medium">Home</a>
+          <a href="products.html" class="text-gray-700 hover:text-blue-600 font-medium">Products</a>
+          <a href="about.html" class="text-gray-700 hover:text-blue-600 font-medium">About Us</a>
           <a href="#" class="text-gray-700 hover:text-blue-600 font-medium">Services</a>
           <a href="#contact" class="text-gray-700 hover:text-blue-600 font-medium">Contact</a>
           <a href="tel:8308830595"
@@ -71,9 +71,9 @@
       <!-- Mobile Menu -->
       <div class="md:hidden hidden bg-white border-t" id="mobile-menu">
         <div class="px-4 py-2 space-y-2">
-          <a href="/index.html" class="block py-2 text-gray-700">Home</a>
-          <a href="/products.html" class="block py-2 text-gray-700">Products</a>
-          <a href="/about.html" class="block py-2 text-gray-700">About Us</a>
+          <a href="index.html" class="block py-2 text-gray-700">Home</a>
+          <a href="products.html" class="block py-2 text-gray-700">Products</a>
+          <a href="about.html" class="block py-2 text-gray-700">About Us</a>
           <a href="#" class="block py-2 text-gray-700">Services</a>
           <a href="#contact" class="block py-2 text-gray-700">Contact</a>
           <!-- Get Quote Button -->
@@ -89,10 +89,6 @@
       </div>
     </nav>
   </header>
-
-
-
-
 
 
   
