--- a/products.html
+++ b/products.html
@@ -48,9 +48,9 @@
 
         <!-- Desktop Nav -->
         <div class="hidden md:flex items-center space-x-8">
-          <a href="/index.html" class="text-gray-700 hover:text-blue-600 font-medium">Home</a>
-          <a href="/products.html" class="text-gray-700 hover:text-blue-600 font-medium">Products</a>
-          <a href="/about.html" class="text-gray-700 hover:text-blue-600 font-medium">About Us</a>
+          <a href="index.html" class="text-gray-700 hover:text-blue-600 font-medium">Home</a>
+          <a href="products.html" class="text-gray-700 hover:text-blue-600 font-medium">Products</a>
+          <a href="about.html" class="text-gray-700 hover:text-blue-600 font-medium">About Us</a>
           <a href="#" class="text-gray-700 hover:text-blue-600 font-medium">Services</a>
           <a href="#contact" class="text-gray-700 hover:text-blue-600 font-medium">Contact</a>
           <a href="tel:8308830595"
@@ -71,9 +71,9 @@
       <!-- Mobile Menu -->
       <div class="md:hidden hidden bg-white border-t" id="mobile-menu">
         <div class="px-4 py-2 space-y-2">
-          <a href="/index.html" class="block py-2 text-gray-700">Home</a>
-          <a href="/products.html" class="block py-2 text-gray-700">Products</a>
-          <a href="/about.html" class="block py-2 text-gray-700">About Us</a>
+          <a href="index.html" class="block py-2 text-gray-700">Home</a>
+          <a href="products.html" class="block py-2 text-gray-700">Products</a>
+          <a href="about.html" class="block py-2 text-gray-700">About Us</a>
           <a href="#" class="block py-2 text-gray-700">Services</a>
           <a href="#contact" class="block py-2 text-gray-700">Contact</a>
           <!-- Get Quote Button -->
@@ -109,7 +109,7 @@
   <div class="flex flex-col md:flex-row">
     <!-- Image -->
     <div class="w-full md:w-1/2 bg-gray-100 flex items-center justify-center">
-      <img src="/assets/products/1.svg" alt="MEGA-11H7"
+      <img src="assets/products/1.svg" alt="MEGA-11H7"
            class="w-full h-full object-contain p-6 max-h-[400px]" />
     </div>
 
@@ -156,7 +156,7 @@
   </a>
 
   <!-- Learn More (About Section Scroll) -->
-  <a href="/about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
+  <a href="about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
     <i class="ri-information-line text-base"></i>
     Learn More
   </a>
@@ -172,7 +172,7 @@
   <div class="flex flex-col md:flex-row">
     <!-- Image -->
     <div class="w-full md:w-1/2 bg-gray-100 flex items-center justify-center">
-      <img src="/assets/products/2.svg" alt="MEGA-11H6"
+      <img src="assets/products/2.svg" alt="MEGA-11H6"
            class="w-full h-full object-contain p-6 max-h-[400px]" />
     </div>
 
@@ -220,7 +220,7 @@
   </a>
 
   <!-- Learn More (About Section Scroll) -->
-  <a href="/about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
+  <a href="about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
     <i class="ri-information-line text-base"></i>
     Learn More
   </a>
@@ -235,7 +235,7 @@
 <div class="bg-white rounded-2xl shadow-lg hover:shadow-xl transition overflow-hidden">
   <div class="flex flex-col md:flex-row">
     <div class="w-full md:w-1/2 bg-gray-100 flex items-center justify-center">
-      <img src="/assets/products/3.svg" alt="JUMBO-2IH4"
+      <img src="assets/products/3.svg" alt="JUMBO-2IH4"
            class="w-full h-full object-contain p-6 max-h-[400px]" />
     </div>
     <div class="w-full md:w-1/2 p-6">
@@ -272,7 +272,7 @@
   </a>
 
   <!-- Learn More (About Section Scroll) -->
-  <a href="/about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
+  <a href="about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
     <i class="ri-information-line text-base"></i>
     Learn More
   </a>
@@ -286,7 +286,7 @@
 <div class="bg-white rounded-2xl shadow-lg hover:shadow-xl transition overflow-hidden">
   <div class="flex flex-col md:flex-row">
     <div class="w-full md:w-1/2 bg-gray-100 flex items-center justify-center">
-      <img src="/assets/products/4.svg" alt="SUMO-1IH6"
+      <img src="assets/products/4.svg" alt="SUMO-1IH6"
            class="w-full h-full object-contain p-6 max-h-[400px]" />
     </div>
     <div class="w-full md:w-1/2 p-6">
@@ -323,7 +323,7 @@
   </a>
 
   <!-- Learn More (About Section Scroll) -->
-  <a href="/about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
+  <a href="about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
     <i class="ri-information-line text-base"></i>
     Learn More
   </a>
@@ -338,7 +338,7 @@
 <div class="bg-white rounded-2xl shadow-lg hover:shadow-xl transition overflow-hidden">
   <div class="flex flex-col md:flex-row">
     <div class="w-full md:w-1/2 bg-gray-100 flex items-center justify-center">
-      <img src="/assets/products/5.svg" alt="GRAM-1IH4"
+      <img src="assets/products/5.svg" alt="GRAM-1IH4"
            class="w-full h-full object-contain p-6 max-h-[400px]" />
     </div>
     <div class="w-full md:w-1/2 p-6">
@@ -375,7 +375,7 @@
   </a>
 
   <!-- Learn More (About Section Scroll) -->
-  <a href="/about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
+  <a href="about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
     <i class="ri-information-line text-base"></i>
     Learn More
   </a>
@@ -390,7 +390,7 @@
 <div class="bg-white rounded-2xl shadow-lg hover:shadow-xl transition overflow-hidden">
   <div class="flex flex-col md:flex-row">
     <div class="w-full md:w-1/2 bg-gray-100 flex items-center justify-center">
-      <img src="/assets/products/6.svg" alt="DC-1IH4"
+      <img src="assets/products/6.svg" alt="DC-1IH4"
            class="w-full h-full object-contain p-6 max-h-[400px]" />
     </div>
     <div class="w-full md:w-1/2 p-6">
@@ -427,7 +427,7 @@
   </a>
 
   <!-- Learn More (About Section Scroll) -->
-  <a href="/about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
+  <a href="about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
     <i class="ri-information-line text-base"></i>
     Learn More
   </a>
@@ -443,7 +443,7 @@
 <div class="bg-white rounded-2xl shadow-lg hover:shadow-xl transition overflow-hidden">
   <div class="flex flex-col md:flex-row">
     <div class="w-full md:w-1/2 bg-gray-100 flex items-center justify-center">
-      <img src="/assets/products/7.svg" alt="DC-1IH5"
+      <img src="assets/products/7.svg" alt="DC-1IH5"
            class="w-full h-full object-contain p-6 max-h-[400px]" />
     </div>
     <div class="w-full md:w-1/2 p-6">
@@ -480,7 +480,7 @@
   </a>
 
   <!-- Learn More (About Section Scroll) -->
-  <a href="/about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
+  <a href="about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
     <i class="ri-information-line text-base"></i>
     Learn More
   </a>
@@ -495,7 +495,7 @@
 <div class="bg-white rounded-2xl shadow-lg hover:shadow-xl transition overflow-hidden">
   <div class="flex flex-col md:flex-row">
     <div class="w-full md:w-1/2 bg-gray-100 flex items-center justify-center">
-      <img src="/assets/products/8.svg" alt="MINI-1IH3"
+      <img src="assets/products/8.svg" alt="MINI-1IH3"
            class="w-full h-full object-contain p-6 max-h-[400px]" />
     </div>
     <div class="w-full md:w-1/2 p-6">
@@ -532,7 +532,7 @@
   </a>
 
   <!-- Learn More (About Section Scroll) -->
-  <a href="/about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
+  <a href="about.html" class="border border-blue-600 text-blue-600 hover:bg-blue-50 text-sm font-semibold py-2 px-6 rounded-md inline-flex items-center gap-2">
     <i class="ri-information-line text-base"></i>
     Learn More
   </a>
