--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
         <!-- Desktop Nav -->
         <div class="hidden md:flex items-center space-x-8">
-          <a href="/index.html" class="text-gray-700 hover:text-blue-600 font-medium">Home</a>
-          <a href="/products.html" class="text-gray-700 hover:text-blue-600 font-medium">Products</a>
-          <a href="/about.html" class="text-gray-700 hover:text-blue-600 font-medium">About Us</a>
+          <a href="index.html" class="text-gray-700 hover:text-blue-600 font-medium">Home</a>
+          <a href="products.html" class="text-gray-700 hover:text-blue-600 font-medium">Products</a>
+          <a href="about.html" class="text-gray-700 hover:text-blue-600 font-medium">About Us</a>
           <a href="#" class="text-gray-700 hover:text-blue-600 font-medium">Services</a>
           <a href="#contact" class="text-gray-700 hover:text-blue-600 font-medium">Contact</a>
           <a href="tel:8308830595"
@@ -71,9 +71,9 @@
       <!-- Mobile Menu -->
       <div class="md:hidden hidden bg-white border-t" id="mobile-menu">
         <div class="px-4 py-2 space-y-2">
-          <a href="/index.html" class="block py-2 text-gray-700">Home</a>
-          <a href="/products.html" class="block py-2 text-gray-700">Products</a>
-          <a href="/about.html" class="block py-2 text-gray-700">About Us</a>
+          <a href="index.html" class="block py-2 text-gray-700">Home</a>
+          <a href="products.html" class="block py-2 text-gray-700">Products</a>
+          <a href="about.html" class="block py-2 text-gray-700">About Us</a>
           <a href="#" class="block py-2 text-gray-700">Services</a>
           <a href="#contact" class="block py-2 text-gray-700">Contact</a>
           <!-- Get Quote Button -->
@@ -139,7 +139,7 @@
           </a>
 
           <!-- About Us Button with user icon -->
-          <a href="/about"
+          <a href="about.html"
             class="px-6 py-3 bg-purple-600 hover:bg-purple-700 text-white font-semibold rounded-lg shadow inline-flex items-center gap-2">
             <i class="ri-user-3-line text-lg"></i>
             About Us
@@ -162,7 +162,7 @@
           <img
             src="https://readdy.ai/api/search-image?query=modern%20industrial%20hydraulic%20machinery%20workshop%20with%20blue%20and%20white%20color%20scheme%2C%20professional%20lighting%2C%20clean%20background%20with%20hydraulic%20pumps%20and%20cylinders%2C%20left%20side%20white%20space%20for%20text%20overlay%2C%20industrial%20equipment%20on%20right%20side%2C%20high-tech%20manufacturing%20environment&width=1920&height=1080&seq=hero1&orientation=landscape"
             class="absolute inset-0 w-full h-full object-cover transition-opacity duration-1000 opacity-0" />
-          <img src="/assets/products/hero1.jpg"
+          <img src="assets/products/hero1.jpg"
             class="absolute inset-0 w-full h-full object-cover transition-opacity duration-1000 opacity-0" />
         </div>
       </div>
@@ -310,7 +310,7 @@
 
         <!-- Button -->
         <div class="mt-8">
-          <a href="/about.html"
+          <a href="about.html"
             class="inline-block px-6 py-3 bg-blue-600 text-white rounded-lg font-semibold shadow hover:bg-blue-700 transition">
             Learn More →
           </a>
@@ -449,7 +449,7 @@
               </a>
 
               <!-- Learn More Button with arrow icon -->
-              <a href="/about.html"
+              <a href="about.html"
                 class="border border-[#0080fc] text-[#0080fc] px-5 py-2 rounded-full font-medium hover:bg-[#0080fc] hover:text-white transition inline-flex items-center gap-2">
                 Learn More
                 <i class="ri-arrow-right-line text-lg"></i>
@@ -484,7 +484,7 @@
               </a>
 
               <!-- Learn More Button with arrow icon -->
-              <a href="/about.html"
+              <a href="about.html"
                 class="border border-[#0080fc] text-[#0080fc] px-5 py-2 rounded-full font-medium hover:bg-[#0080fc] hover:text-white transition inline-flex items-center gap-2">
                 Learn More
                 <i class="ri-arrow-right-line text-lg"></i>
@@ -519,7 +519,7 @@
               </a>
 
               <!-- Learn More Button with arrow icon -->
-              <a href="/about.html"
+              <a href="about.html"
                 class="border border-[#0080fc] text-[#0080fc] px-5 py-2 rounded-full font-medium hover:bg-[#0080fc] hover:text-white transition inline-flex items-center gap-2">
                 Learn More
                 <i class="ri-arrow-right-line text-lg"></i>
@@ -554,7 +554,7 @@
               </a>
 
               <!-- Learn More Button with arrow icon -->
-              <a href="/about.html"
+              <a href="about.html"
                 class="border border-[#0080fc] text-[#0080fc] px-5 py-2 rounded-full font-medium hover:bg-[#0080fc] hover:text-white transition inline-flex items-center gap-2">
                 Learn More
                 <i class="ri-arrow-right-line text-lg"></i>
@@ -588,7 +588,7 @@
               </a>
 
               <!-- Learn More Button with arrow icon -->
-              <a href="/about.html"
+              <a href="about.html"
                 class="border border-[#0080fc] text-[#0080fc] px-5 py-2 rounded-full font-medium hover:bg-[#0080fc] hover:text-white transition inline-flex items-center gap-2">
                 Learn More
                 <i class="ri-arrow-right-line text-lg"></i>
@@ -602,7 +602,7 @@
 
       <!-- View All Button -->
       <div class="text-center mt-12">
-        <a href="/products.html"
+        <a href="products.html"
           class="bg-white border border-[#0080fc] text-[#0080fc] px-6 py-3 rounded-button font-medium hover:bg-[#0080fc] hover:text-white transition inline-block">
           View All Products
         </a>
