--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
       <!-- Left Image -->
       <div class="flex justify-center" data-aos="fade-right" data-aos-duration="1000">
-        <img src="assets/Hero/about.svg" alt="Main Image"
+        <img src="assets/hero/about.svg" alt="Main Image"
           class="rounded-xl shadow-lg w-full max-w-md md:max-w-lg object-cover" />
       </div>
 
