--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
           <a href="#contact" class="block py-2 text-gray-700">Contact</a>
           <!-- Get Quote Button -->
           <div class="pt-3 border-t border-gray-200">
-         <a href="tel:8308830595"
-            class="ml-4 inline-block px-5 py-2 bg-blue-600 text-white text-sm font-semibold rounded-md hover:bg-blue-700 transition inline-flex items-center gap-2">
-            <i class="ri-phone-line text-base"></i>
-            Get Quote
-          </a>
+            <a href="tel:8308830595"
+              class="ml-4 inline-block px-5 py-2 bg-blue-600 text-white text-sm font-semibold rounded-md hover:bg-blue-700 transition inline-flex items-center gap-2">
+              <i class="ri-phone-line text-base"></i>
+              Get Quote
+            </a>
 
           </div>
         </div>
@@ -131,19 +131,20 @@
         <!-- Buttons -->
         <!-- Buttons -->
         <div class="flex flex-wrap gap-4">
+
+          <a href="products.html"
+          class="px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg shadow inline-flex items-center gap-2">
+            <i class="ri-store-2-line	 text-lg"></i> 
+            Products
+          </a>
+
           <!-- Get Quote Button with customer service icon -->
           <a href="tel:8308830595"
-            class="px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg shadow inline-flex items-center gap-2">
-            <i class="ri-customer-service-2-line text-lg"></i>
+            class="px-6 py-3 bg-purple-600 hover:bg-purple-700 text-white font-semibold rounded-lg shadow inline-flex items-center gap-2">            <i class="ri-customer-service-2-line text-lg"></i>
             Get Quote
           </a>
 
-          <!-- About Us Button with user icon -->
-          <a href="about.html"
-            class="px-6 py-3 bg-purple-600 hover:bg-purple-700 text-white font-semibold rounded-lg shadow inline-flex items-center gap-2">
-            <i class="ri-user-3-line text-lg"></i>
-            About Us
-          </a>
+
         </div>
 
       </div>
@@ -612,94 +613,103 @@
   </section>
 
 
-<!-- About Us Section -->
-<!-- Why Choose Infinity Hydraulics -->
-<section class="py-20 bg-slate-50" id="why-infinity">
+  <!-- About Us Section -->
+  <!-- Why Choose Infinity Hydraulics -->
+  <section class="py-20 bg-slate-50" id="why-infinity">
 
 
 
-  <div class="max-w-7xl mx-auto px-6">
-    <!-- Section Header -->
-    <div class="text-center mb-12">
-      <h2 class="text-4xl font-bold text-gray-900">
-        Why <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-purple-500">Choose Infinity Hydraulics?</span>
-      </h2>
-      <p class="text-gray-600 max-w-2xl mx-auto mt-4 text-lg">
-        Infinity Hydraulics is trusted by industries nationwide for our proven excellence in hydraulic equipment and services.
-      </p>
+    <div class="max-w-7xl mx-auto px-6">
+      <!-- Section Header -->
+      <div class="text-center mb-12">
+        <h2 class="text-4xl font-bold text-gray-900">
+          Why <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-purple-500">Choose Infinity
+            Hydraulics?</span>
+        </h2>
+        <p class="text-gray-600 max-w-2xl mx-auto mt-4 text-lg">
+          Infinity Hydraulics is trusted by industries nationwide for our proven excellence in hydraulic equipment and
+          services.
+        </p>
+      </div>
+
+      <!-- Feature Cards -->
+      <div class="grid md:grid-cols-3 gap-8">
+
+        <!-- Industry Expertise -->
+        <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition" data-aos="fade-up">
+          <div class="text-4xl text-blue-600 mb-4">
+            <i class="ri-lightbulb-flash-line"></i>
+          </div>
+          <h4 class="text-xl font-bold mb-2">Industry Expertise & Innovation</h4>
+          <p class="text-gray-600 text-sm">
+            Backed by years of field experience and technical knowledge, we deliver advanced solutions for modern
+            industrial needs.
+          </p>
+        </div>
+
+        <!-- End-to-End Solutions -->
+        <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition" data-aos="fade-up"
+          data-aos-delay="100">
+          <div class="text-4xl text-blue-600 mb-4">
+            <i class="ri-tools-line"></i>
+          </div>
+          <h4 class="text-xl font-bold mb-2">End-to-End Hydraulic Solutions</h4>
+          <p class="text-gray-600 text-sm">
+            From pumps and cylinders to custom balers, we provide complete, integrated hydraulic systems under one roof.
+          </p>
+        </div>
+
+        <!-- Tested Quality -->
+        <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition" data-aos="fade-up"
+          data-aos-delay="200">
+          <div class="text-4xl text-blue-600 mb-4">
+            <i class="ri-shield-check-line"></i>
+          </div>
+          <h4 class="text-xl font-bold mb-2">Tested for Maximum Performance</h4>
+          <p class="text-gray-600 text-sm">
+            Every product is tested to full capacity before delivery, ensuring consistent quality and long-lasting
+            performance.
+          </p>
+        </div>
+
+        <!-- Modular Design -->
+        <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition" data-aos="fade-up">
+          <div class="text-4xl text-blue-600 mb-4">
+            <i class="ri-layout-2-line"></i>
+          </div>
+          <h4 class="text-xl font-bold mb-2">Modular & Scalable Design</h4>
+          <p class="text-gray-600 text-sm">
+            Our modular approach allows for easy upgrades, flexible integration, and reduced maintenance costs.
+          </p>
+        </div>
+
+        <!-- Customer Support -->
+        <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition" data-aos="fade-up"
+          data-aos-delay="100">
+          <div class="text-4xl text-blue-600 mb-4">
+            <i class="ri-customer-service-2-line"></i>
+          </div>
+          <h4 class="text-xl font-bold mb-2">Responsive Customer Service</h4>
+          <p class="text-gray-600 text-sm">
+            Our support team ensures prompt, friendly responses and fast solutions for all your service needs.
+          </p>
+        </div>
+
+        <!-- Trusted by Clients -->
+        <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition" data-aos="fade-up"
+          data-aos-delay="200">
+          <div class="text-4xl text-blue-600 mb-4">
+            <i class="ri-handshake-line"></i>
+          </div>
+          <h4 class="text-xl font-bold mb-2">Proven Client Satisfaction</h4>
+          <p class="text-gray-600 text-sm">
+            We’ve built long-term relationships with clients — some trusting us for over two decades because we deliver
+            results.
+          </p>
+        </div>
+      </div>
     </div>
-
-    <!-- Feature Cards -->
-    <div class="grid md:grid-cols-3 gap-8">
-      
-      <!-- Industry Expertise -->
-      <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition" data-aos="fade-up">
-        <div class="text-4xl text-blue-600 mb-4">
-          <i class="ri-lightbulb-flash-line"></i>
-        </div>
-        <h4 class="text-xl font-bold mb-2">Industry Expertise & Innovation</h4>
-        <p class="text-gray-600 text-sm">
-          Backed by years of field experience and technical knowledge, we deliver advanced solutions for modern industrial needs.
-        </p>
-      </div>
-
-      <!-- End-to-End Solutions -->
-      <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition" data-aos="fade-up" data-aos-delay="100">
-        <div class="text-4xl text-blue-600 mb-4">
-          <i class="ri-tools-line"></i>
-        </div>
-        <h4 class="text-xl font-bold mb-2">End-to-End Hydraulic Solutions</h4>
-        <p class="text-gray-600 text-sm">
-          From pumps and cylinders to custom balers, we provide complete, integrated hydraulic systems under one roof.
-        </p>
-      </div>
-
-      <!-- Tested Quality -->
-      <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition" data-aos="fade-up" data-aos-delay="200">
-        <div class="text-4xl text-blue-600 mb-4">
-          <i class="ri-shield-check-line"></i>
-        </div>
-        <h4 class="text-xl font-bold mb-2">Tested for Maximum Performance</h4>
-        <p class="text-gray-600 text-sm">
-          Every product is tested to full capacity before delivery, ensuring consistent quality and long-lasting performance.
-        </p>
-      </div>
-
-      <!-- Modular Design -->
-      <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition" data-aos="fade-up">
-        <div class="text-4xl text-blue-600 mb-4">
-          <i class="ri-layout-2-line"></i>
-        </div>
-        <h4 class="text-xl font-bold mb-2">Modular & Scalable Design</h4>
-        <p class="text-gray-600 text-sm">
-          Our modular approach allows for easy upgrades, flexible integration, and reduced maintenance costs.
-        </p>
-      </div>
-
-      <!-- Customer Support -->
-      <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition" data-aos="fade-up" data-aos-delay="100">
-        <div class="text-4xl text-blue-600 mb-4">
-          <i class="ri-customer-service-2-line"></i>
-        </div>
-        <h4 class="text-xl font-bold mb-2">Responsive Customer Service</h4>
-        <p class="text-gray-600 text-sm">
-          Our support team ensures prompt, friendly responses and fast solutions for all your service needs.
-        </p>
-      </div>
-
-      <!-- Trusted by Clients -->
-      <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition" data-aos="fade-up" data-aos-delay="200">
-        <div class="text-4xl text-blue-600 mb-4">
-          <i class="ri-handshake-line"></i>
-        </div>
-        <h4 class="text-xl font-bold mb-2">Proven Client Satisfaction</h4>
-        <p class="text-gray-600 text-sm">
-          We’ve built long-term relationships with clients — some trusting us for over two decades because we deliver results.
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
+  </section>
 
 
 
